--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<head th:include="template.html::head">
+    <title>Login page</title>
 </head>
 <body>
+
 <div class="container">
-    <div class="form">
+    <!--<div th:replace="template.html::header"></div>-->
+
+    <div th:if="${param.error}">
+        Invalid username or password.
+    </div>
+
+    <div th:if="${param.logout}">
+        You have been logged out.
+    </div>
+
+    <!--/login is set in MvcConfig class not in controllers classes-->
+    <form th:action="@{/login}" method="post">
+        <div><label> User Name : <input type="text" name="username"/> </label></div>
+        <div><label> Password: <input type="password" name="password"/> </label></div>
+        <div><input type="submit" value="Sign In"/></div>
+    </form>
+
+
+    <!--<div class="form">
         <form action="/login" method="post">
             Login: <br>
             <input type="text" name="login"><br>
@@ -14,7 +33,10 @@
             <input type="password" name="password">
             <input type="submit">
         </form>
-    </div>
+    </div>-->
+
+    <div th:replace="template.html::footer"/>
 </div>
+
 </body>
 </html>
