--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -30,6 +30,46 @@
     <script src="js/script.js"/>
 </div>
 
+<!--NAVBAR-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="navbar" >
+    <a class="navbar-brand" href="#">MyPassword</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav" style="text-align: center">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/data">Passwords</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/data/add">Add position</a>
+            </li>
+        </ul>
+
+    </div>
+    <form class="form-inline my-2 my-lg-0">
+        <!--<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
+        <th:block  sec:authorize="isAuthenticated()">
+            <a class="nav-link" href="/user">My Account</a>
+<!--
+            <a class="nav-link" href="/logout">Logout</a>
+-->
+            <form class="nav-link" th:action="@{/logout}" method="post">
+                <input type="submit" value="Sign Out"/>
+            </form>
+        </th:block>
+        <th:block  sec:authorize="!isAuthenticated()">
+            <a class="nav-link" th:href="@{/login}">Login</a>
+            <a class="nav-link" th:href="@{/logout}">Register</a>
+        </th:block>
+
+    </form>
+</nav>
+
 
 <footer th:fragment="footer" class="footer">
     <p>Password manager by Dawid W.</p>
