--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -5,7 +5,7 @@
     <title>Login page</title>
 </head>
 <body>
-
+<div th:replace="template.html::navbar"></div>
 <div class="container">
     <!--<div th:replace="template.html::header"></div>-->
 
