--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -41,33 +41,37 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
+            <th:block sec:authorize="isAuthenticated()">
             <li class="nav-item">
                 <a class="nav-link" href="/data">Passwords</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/data/add">Add position</a>
             </li>
+            </th:block>
         </ul>
 
     </div>
-    <form class="form-inline my-2 my-lg-0">
+    <!--READ THIS: https://stackoverflow.com/questions/3430214/form-inside-a-form-is-that-alright-->
+    <div class="form-inline my-2 my-lg-0">
         <!--<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
         <th:block  sec:authorize="isAuthenticated()">
-            <a class="nav-link" href="/user">My Account</a>
-<!--
-            <a class="nav-link" href="/logout">Logout</a>
--->
-            <form class="nav-link" th:action="@{/logout}" method="post">
+            <a class="nav-link" th:href="@{/user}">My Account</a>
+
+            <!--<a class="nav-link" th:href="@{/logout}">Logout</a>-->
+
+        <form class="nav-link"  th:action="@{/logout}" method="post"> <!--class="nav-link"-->
                 <input type="submit" value="Sign Out"/>
-            </form>
+        </form>
+
         </th:block>
         <th:block  sec:authorize="!isAuthenticated()">
             <a class="nav-link" th:href="@{/login}">Login</a>
-            <a class="nav-link" th:href="@{/logout}">Register</a>
+            <a class="nav-link" th:href="@{/registration}">Register</a>
         </th:block>
 
-    </form>
+    </div>
 </nav>
 
 
