--- a/src/main/resources/templates/user/registration.html
+++ b/src/main/resources/templates/user/registration.html
@@ -9,7 +9,7 @@
 <div th:replace="template.html::navbar"></div>
 <div class="container">
     <div class="form">
-        <form  method="post" th:action="@{/user/registration}" th:object="${userForm}">
+        <form  method="post" th:action="@{/registration}" th:object="${userForm}">
             <labal for="login">Login:</labal>
             <input type="text" id="login" th:field="*{username}"><br/>
 
