--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,9 +1,31 @@
 
-header{
-    text-align: center;
+body{
+    background-image: url(../assets/padlock_photo.jpg);
+    background-size: auto;
+    /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
 }
 
 .container{
-    /*text-align: center;*/
+    margin-top:100px;
+    padding-bottom: 60px;
+    background-color:white;
+    border-radius: 15px 50px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+header{
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.dataTable{
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 20px;
+}
+
+.container{
+    text-align: center;
     width: 400px;
 }
+
