--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -62,7 +62,8 @@
             <!--<a class="nav-link" th:href="@{/logout}">Logout</a>-->
 
         <form class="nav-link"  th:action="@{/logout}" method="post"> <!--class="nav-link"-->
-                <input type="submit" value="Sign Out"/>
+                <!--<input type="submit" value="Sign Out"/>-->
+            <button type="submit" class="btn btn-primary">Sign out</button>
         </form>
 
         </th:block>
