--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -43,12 +43,12 @@
     <form th:action="@{/loginCheckpoint}" method="post">
         <div class="form-group">
             <label for="exampleInputEmail1">Login</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter username" name="username" autofocus="autofocus">
+            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter username" name="username" autofocus="autofocus" required>
             <!--<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>-->
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password" required>
         </div>
         <!--<div class="form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
