--- a/src/main/resources/templates/user/registration.html
+++ b/src/main/resources/templates/user/registration.html
@@ -13,27 +13,27 @@
         <form method="post" th:action="@{/registration}" th:object="${userForm}">
             <div class="form-group">
                 <label for="login">Login:</label>
-                <input type="text" id="login" th:field="*{username}" class="form-control">
+                <input type="text" id="login" th:field="*{username}" class="form-control" pattern="[A-Za-z]{4,}" required>
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
-                <input type="password" id="password" th:field="*{password}" class="form-control">
+                <input type="password" id="password" th:field="*{password}" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
             </div>
             <div class="form-group">
                 <label for="passwordConfirm">Confirm password</label>
-                <input type="password" id="passwordConfirm" th:field="*{passwordConfirm}" class="form-control">
+                <input type="password" id="passwordConfirm" th:field="*{passwordConfirm}" class="form-control" required>
             </div>
             <div class="form-group">
                 <label for="name">Name:</label>
-                <input type="text" id="name" th:field="*{name}" class="form-control">
+                <input type="text" id="name" th:field="*{name}" class="form-control" required>
             </div>
             <div class="form-group">
                 <label for="surname">Surname:</label>
-                <input type="text" id="surname" th:field="*{surname}" class="form-control">
+                <input type="text" id="surname" th:field="*{surname}" class="form-control" required>
             </div>
             <div class="form-group">
                 <label for="email">Email:</label>
-                <input type="text" id="email" th:field="*{email}" class="form-control">
+                <input type="email" id="email" th:field="*{email}" class="form-control" required>
             </div>
 
             <!--<input type="submit" value="Submit"/>-->
